# Api-Restaurant

./: .dockerignore  .flake8  Dockerfile  Dockerfile_test  README.md  alembic.ini  app.sh  docker-compose-test.yml  docker-compose.yml  pyproject.toml
admin/: Menu.xlsx  Menu1.xlsx
celery_tasks/: factory.py  main.py
celery_tasks/tasks/: task_admin.py  utils.py
celery_tasks/tasks/config/: common.py  config.py
celery_tasks/tasks/sevices/: admin.py  db.py  redis.py
config_env/: .env
src/api/: __main__.py  main.py  main_factory.py
src/api/dependencies/: __init__.py  db.py
src/api/models/: base.py  requests.py  responses.py
src/api/routers/: __init__.py  dish.py  menu.py  submenu.py
src/common/congif/: db.py  key_redis.py
src/core/: utils.py
src/core/models/: redis.py
src/core/models/dto/: base_dto.py  dish.py  menu.py  submenu.py
src/core/services/: dish.py  errors.py  menu.py  submenu.py
src/infrastructure/db/: factory.py
src/infrastructure/db/congif/moleds/: db.py
src/infrastructure/db/dao/: holder.py
src/infrastructure/db/dao/rbd/: base.py  dish.py  menu.py  submenu.py
src/infrastructure/db/dao/redis/: redis_dao.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2f7c94848938_init.py  5c47dd84e486_.py  6882b6506585_init.py  (+3 more)
src/infrastructure/db/models/: __init__.py  dish.py  menu.py  submenu.py
tests/config_env/: .env
tests/fixtures/: dish.py  menu.py  submenu.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py  test_case.py  test_dish.py  test_menu.py  test_submenu.py
(+1 files in other folders)
