[tool.poetry]
name = "y-lab"
version = "0.1.0"
description = ""
authors = ["Georgy Sychev <lvl_slep@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.3.3"
types-redis = "^4.6.0.3"
redis = "^4.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ['.', 'src']
asyncio_mode = 'auto'
